final for testing

--- a/index_bk.html
+++ b/index_bk.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
+<header>
 	<title>About Me</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
-</head>
+</header>
 
-<body>
+<body class="parent">
 
-<div class="menu">
-  <div class="menu-1">
+<div class="head">
+	<div class="head-1">
 	  <h1>Rob Brooks</h1>
 	</div>
-  <div class="menu-2">
+
+	<div class="head-2">
 		<ul>
 		  <li><a class="page" href="contact.html">Contact</a></li>
 		  <li><a class="page" href="portfolio.html">Portfolio</a></li>
 		  <li><a class="page" href="index.html">About</a></li>
 		</ul>
-	</div> 
+		<div class="clear"></div>
+	</div>
 </div>
 
 <div class="row">
 	<div class="col-1">
 	<h1 class="title">About me</h1>
 	<img class="profile" src="assets/images/rob.JPG" alt="rob">
-	<p>I am an engineer with over four years of experience in database and software development, design, and implementation. Proficient in Tableau, SQL Oracle, Microsoft SQL Server, MySQL, Microsoft SharePoint, SAP Business Objects, SSRS, data modeling, and report writing.</p><p> Actively involved in designing and developing real-time projects/enterprise applications, starting from the requirements analysis/design stages and through the whole Software Development Life Cycle. </p>
+	<div class="text">I am an engineer with over four years of experience in database and software development, design, and implementation. Proficient in Tableau, SQL Oracle, Microsoft SQL Server, MySQL, Microsoft SharePoint, SAP Business Objects, SSRS, data modeling, and report writing.</div><div class="text"> Actively involved in designing and developing real-time projects/enterprise applications, starting from the requirements analysis/design stages and through the whole Software Development Life Cycle. </div>
 	</div>
 
 	<div class="col-2">
