--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Contact Form</title>
+	<title>About Me</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="parent">
+<body>
 
-<div class="header">
-	<div class="float">
-	  <h1>Roberto Brooks</h1>
+<div class="menu">
+  <div class="menu-1">
+	  <h1>Rob Brooks</h1>
 	</div>
-
-	<div class="float-1">
+  <div class="menu-2">
 		<ul>
 		  <li><a class="page" href="contact.html">Contact</a></li>
 		  <li><a class="page" href="portfolio.html">Portfolio</a></li>
 		  <li><a class="page" href="index.html">About</a></li>
 		</ul>
-		<div class="clear"></div>
-	</div>
+	</div> 
 </div>
 
-<div class="body">
-	<div class="float-2">
+<div class="row">
+	<div class="col-1">
 	<h1 class="title">Contact</h1>
 	<div class="text">Name</div>
 	<input class="box" name="searchbox" onfocus="if (this.value=='John Smith') this.value = ''" type="text" value="John Smith">
@@ -33,16 +32,14 @@
 	<div class="text">Message</div>
 	<input class="textbox" name="textbox">
 	<button class="submit" type="button" onclick="alert('Submitted!')">Submit</button>
-
 	</div>
 
-	<div class="float-3">
+	<div class="col-2">
 	<h1 class="title">Connect with Me</h1>
 	<a  href="https://github.com/robertobrooks"><img class="social" src="assets/images/github.png" alt="github"></a>
 	<a  href="https://linkedin.com/in/robjbrooks"><img class="social" src="assets/images/linkedin.png" alt="linkedin"></a>
 	<a  href="https://stackexchange.com/users/10717099/rbrux"><img class="stack" src="assets/images/stackoverflow.png" alt="stackoverflow"></a>
 	</div>
-
 </div>
 
 <div class="footer">
