--- a/contact_bk.html
+++ b/contact_bk.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Me</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Contact Form</title>
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="parent">
 
-<div class="menu">
-  <div class="menu-1">
-	  <h1>Rob Brooks</h1>
+<div class="header">
+	<div class="float">
+	  <h1>Roberto Brooks</h1>
 	</div>
-  <div class="menu-2">
+
+	<div class="float-1">
 		<ul>
 		  <li><a class="page" href="contact.html">Contact</a></li>
 		  <li><a class="page" href="portfolio.html">Portfolio</a></li>
 		  <li><a class="page" href="index.html">About</a></li>
 		</ul>
-	</div> 
+		<div class="clear"></div>
+	</div>
 </div>
 
-<div class="row">
-	<div class="col-1">
-	<h1 class="title">About me</h1>
-	<img class="profile" src="assets/images/rob.JPG" alt="rob">
-	<p>I am an engineer with over four years of experience in database and software development, design, and implementation. Proficient in Tableau, SQL Oracle, Microsoft SQL Server, MySQL, Microsoft SharePoint, SAP Business Objects, SSRS, data modeling, and report writing.</p><p> Actively involved in designing and developing real-time projects/enterprise applications, starting from the requirements analysis/design stages and through the whole Software Development Life Cycle. </p>
+<div class="body">
+	<div class="float-2">
+	<h1 class="title">Contact</h1>
+	<div class="text">Name</div>
+	<input class="box" name="searchbox" onfocus="if (this.value=='John Smith') this.value = ''" type="text" value="John Smith">
+	<div class="text">Email</div>
+	<input class="box" name="searchbox" onfocus="if (this.value=='example@gmail.com') this.value = ''" type="text" value="example@gmail.com">
+	<div class="text">Message</div>
+	<input class="textbox" name="textbox">
+	<button class="submit" type="button" onclick="alert('Submitted!')">Submit</button>
+
 	</div>
 
-	<div class="col-2">
+	<div class="float-3">
 	<h1 class="title">Connect with Me</h1>
 	<a  href="https://github.com/robertobrooks"><img class="social" src="assets/images/github.png" alt="github"></a>
 	<a  href="https://linkedin.com/in/robjbrooks"><img class="social" src="assets/images/linkedin.png" alt="linkedin"></a>
 	<a  href="https://stackexchange.com/users/10717099/rbrux"><img class="stack" src="assets/images/stackoverflow.png" alt="stackoverflow"></a>
 	</div>
+
 </div>
 
 <div class="footer">
