--- a/portfolio.html
+++ b/portfolio.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio</title>
+	<title>About Me</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="parent">
+<body>
 
-<div class="header">
-	<div class="float">
-	  <h1>Roberto Brooks</h1>
+<div class="menu">
+  <div class="menu-1">
+	  <h1>Rob Brooks</h1>
 	</div>
-
-	<div class="float-1">
+  <div class="menu-2">
 		<ul>
 		  <li><a class="page" href="contact.html">Contact</a></li>
 		  <li><a class="page" href="portfolio.html">Portfolio</a></li>
 		  <li><a class="page" href="index.html">About</a></li>
 		</ul>
-		<div class="clear"></div>
-	</div>
+	</div> 
 </div>
 
-<div class="body">
-	<div class="float-2">
+<div class="row">
+	<div class="col-1">
 	<h1 class="title">Portfolio</h1>
 	<img class="portfolio" src="assets/images/portfolio1.jpg" alt="rob">
 	<img class="portfolio" src="assets/images/portfolio2.jpg" alt="rob">
@@ -33,13 +32,12 @@
 	<img class="portfolio" src="assets/images/portfolio5.jpg" alt="rob">
 	</div>
 
-	<div class="float-3">
+	<div class="col-2">
 	<h1 class="title">Connect with Me</h1>
 	<a  href="https://github.com/robertobrooks"><img class="social" src="assets/images/github.png" alt="github"></a>
 	<a  href="https://linkedin.com/in/robjbrooks"><img class="social" src="assets/images/linkedin.png" alt="linkedin"></a>
 	<a  href="https://stackexchange.com/users/10717099/rbrux"><img class="stack" src="assets/images/stackoverflow.png" alt="stackoverflow"></a>
 	</div>
-
 </div>
 
 <div class="footer">
